force-app/main/default/objects/leaseworks__Stepped_Rent__c/leaseworks__Stepped_Rent__c.object-meta.xml
<CustomObject>
    <description>This lease-level configuration table houses Rent Schedule parameters, including start/end dates and base rent. While typically a single schedule exists per lease, exceptions involving rent type changes (fixed to PBH, etc.) necessitate additional schedules. Users leverage Rent Studio to manage these schedules, generating rent slips and subsequent invoices.
If Applicable and the Rent Type can be Fixed, Floating, Seasonal, PBH.
This lease-level configuration table houses Rent Schedule parameters, including start/end dates and base rent. While typically a single schedule exists per lease, exceptions involving rent type changes (fixed to PBH, etc.) necessitate additional schedules. Users leverage Rent Studio to manage these schedules, generating rent slips and subsequent invoices.
[MODULE: Contract]
[LOAD: Yes]
[PREREQUISITES: Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Rent Schedule</label>
    <nameField>
        <label>Rent Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rent Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>