force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Applicable_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Applicable_Rent__c</fullName>
    <formula>leaseworks__Rent_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2109_Rent Amount_App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>