force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Rent__c</fullName>
    <inlineHelpText>Amount of Rent per Rent Period, as per the Lease. If PBH Rent is selected, this is the Fixed portion of PBH Rent, as per the Lease</inlineHelpText>
    <label>Base Rent($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>