force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Currency__c</fullName>
    <description>Select the applicable currency for this rent schedule. The billing currency is the agreed-upon contract currency used to issue invoices to the lessee</description>
    <inlineHelpText>Select the applicable currency for this rent schedule. The billing currency is the agreed-upon contract currency used to issue invoices to the lessee. Note: Billing currency selection is only supported for the Fixed Rent type.</inlineHelpText>
    <label>Billing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>