force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Business_Days_Prior__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Business_Days_Prior__c</fullName>
    <description>With regard to obtaining the Actual Interest Rate, this is the number of business days before the Rent Start Date, as specified in the Lease Agreement. Please adjust rent slips for banking holidays.</description>
    <inlineHelpText>With regard to obtaining the Actual Interest Rate, this is the number of business days before the Rent Start Date, as specified in the Lease Agreement. Please adjust Rent Slips for banking holidays.</inlineHelpText>
    <label>Business Days Prior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>