force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Cost_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_of_Funds__c</fullName>
    <description>Please enter the Rate stipulated in the Lease Agreement.</description>
    <inlineHelpText>Please enter the Rate stipulated in the Lease Agreement.</inlineHelpText>
    <label>Cost of Funds</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>