force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Day__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Day__c</fullName>
    <description>This field is used to set the rent due date based on the rent due type &#39;Fixed Day in a Week&#39;.</description>
    <inlineHelpText>Please select the day, e.g. Tuesday</inlineHelpText>
    <label>Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>