force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Different_First_Rent_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Different_First_Rent_Period__c</fullName>
    <formula>NOT(ISNULL(leaseworks__Sec_Rent_Perd_Start_Dt__c))</formula>
    <inlineHelpText>This will be true if Second Rent Period Start Date is entered.</inlineHelpText>
    <label>Different First Rent Period</label>
    <type>Checkbox</type>
</CustomField>