force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__First_Rent_Rate_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First_Rent_Rate_Reset_Date__c</fullName>
    <description>With regard to obtaining the Actual Interest Rate, this is the number of business days before the Rent Start Date, as specified in the Lease Agreement. Please adjust for banking holidays.</description>
    <inlineHelpText>With regard to obtaining the Actual Interest Rate, this is the number of business days before the Rent Start Date, as specified in the Lease Agreement. Please adjust for banking holidays.</inlineHelpText>
    <label>First Rent Rate Reset Date</label>
    <type>Date</type>
</CustomField>