force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Floating_Rent_Inputs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Floating_Rent_Inputs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2012 Floating Rent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Floating_Rent_Inputs__c.leaseworks__Lease__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Floating_Rent_Inputs__c</referenceTo>
    <relationshipLabel>Multi Rent Schedule</relationshipLabel>
    <relationshipName>Multi_Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>