force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Interest_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the index that has been identified in the Lease Agreement. Start typing (e.g. 3M) to pull up available choices.</description>
    <inlineHelpText>Select the index that has been identified in the Lease Agreement. Start typing (e.g. 3M) to pull up available choices.</inlineHelpText>
    <label>Interest Rate Index</label>
    <referenceTo>leaseworks__Interest_Rate_Index__c</referenceTo>
    <relationshipLabel>Multi Rent Schedule</relationshipLabel>
    <relationshipName>Multi_Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>