force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__IsLeaseExtended__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsLeaseExtended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is True, only if the Lease is Extended from the MidTermLeaseUpdate Wizard. The default value will be false.</description>
    <label>Z_Unused_2109_IsLeaseExtended?</label>
    <type>Checkbox</type>
</CustomField>