force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__IsNewSchedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsNewSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_IsNewSchedule?</label>
    <type>Checkbox</type>
</CustomField>