force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__LIBOR_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LIBOR_F__c</fullName>
    <formula>Null /*Floating_Rent_Inputs__r.Actual_Interest_Rate__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Interest % Rate for variable rent calculation</inlineHelpText>
    <label>Z_Unused_2012 Actual Interest % Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>