force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Low_Season_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Low_Season_Rent__c</fullName>
    <label>Low Season Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>