force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Manufacturer_Escalation_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer_Escalation_Factor__c</fullName>
    <description>Enter this value as specified in the Lease Agreement. If not required, leave blank.</description>
    <inlineHelpText>Enter this value as specified in the Lease Agreement. If not required, leave blank.</inlineHelpText>
    <label>Manufacturer Escalation Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>