force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Minimum_PBH_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Minimum_PBH_Amount__c</fullName>
    <inlineHelpText>Minimum PBH Amount sets the minimum amount on calculation of the PBH adjustment.</inlineHelpText>
    <label>Minimum PBH Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>