force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Minimum_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Minimum_Total_Amount__c</fullName>
    <inlineHelpText>The Minimum Total Amount ensures that the total of the Rent value (fixed portion and PBH portion of the Rent Invoice) amount does not go above the entered value.</inlineHelpText>
    <label>Minimum Total Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>