force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__N_Factor_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__N_Factor_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate the n-factor schedule here, and the system will automatically select the appropriate schedule for the floating calculation based on the specified period. The period will be set behind the scenes according to the Interest Rate Index frequency. For example, for rental periods of January to December 2024 with a 3-month USD LIBOR and a first reset date of 01/01/2024, the first 3 months will be considered as Period 1.</description>
    <inlineHelpText>Associate the n-factor schedule here, and the system will automatically select the appropriate schedule for the floating calculation based on the specified period. The period will be set behind the scenes according to the Interest Rate Index frequency. For example, for rental periods of January to December 2024 with a 3-month USD LIBOR and a first reset date of 01/01/2024, the first 3 months will be considered as Period 1.</inlineHelpText>
    <label>Rental Adjustment Factor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__N_Factor_Schedule__c.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__N_Factor_Schedule__c</referenceTo>
    <relationshipLabel>Rent Schedule</relationshipLabel>
    <relationshipName>N_Factor_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>