force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__New_Maximum_PBH_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Maximum_PBH_Amount__c</fullName>
    <description>The maximum total PBH charges allowable for the contract, in the selected billing currency.</description>
    <formula>leaseworks__Maximum_PBH_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The maximum total PBH charges allowable for the contract, in the selected billing currency.</inlineHelpText>
    <label>Maximum PBH Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>