force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Note__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Note__c</fullName>
    <description>This field is used to show a message to the user on the SLR Amount for Journals Quick Action</description>
    <formula>&#39;When you click on Save, SLR schedules will not be created. Instead, SLR journal lines will be generated based on the gross method at the time of invoicing rent slips.&#39;</formula>
    <label>Remark</label>
    <type>Text</type>
</CustomField>