force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Primary_Rent_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Primary_Rent_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the single Rent Schedule that drives rent values on the Contract.
        [LOAD:Yes]
        [JUSTIFICATION: To identify the primary rent schedule for a contract]
        [REPLACEMENT OBJECT API: NA]
        [REPLACEMENT FIELD API: NA]
        [COMMENTS: NA]</description>
    <inlineHelpText>Select this checkbox to mark this Rent Schedule as the Primary Rent Schedule for the Contract. Only one Rent Schedule under a Contract can be marked as Primary. Fields- Base Rent, Current Rent and Applicable Rent on Contract will be automatically populated based on the values from this Primary Rent Schedule.</inlineHelpText>
    <label>Primary Rent Schedule</label>
    <type>Checkbox</type>
</CustomField>