force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Pro_rata_Number_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pro_rata_Number_Of_Days__c</fullName>
    <defaultValue>&#39;Actual number of days in month/year&#39;</defaultValue>
    <description>For partial rent periods, the rent is calculated based on two prorate options:
        Actual Number of Days in Month/Year: Rent is prorated as ((Period Days/actual days in the month) ∗ Base Rent). The number of days in a month can be 28, 29, 30, or 31.
        30/360: Rent is prorated as ((Period Days/30) ∗ Base Rent).
        This applies to monthly, quarterly, semi-annual, and annual rental periods.</description>
    <inlineHelpText>For partial rent periods, the rent is calculated based on two prorate options:
Actual Number of Days in Month/Year: Rent is prorated as ((Period Days/actual days in the month) ∗ Base Rent). The number of days in a month can be 28, 29, 30, or 31.
30/360: Rent is prorated as ((Period Days/30) ∗ Base Rent).
This applies to monthly, quarterly, semi-annual, and annual rental periods.</inlineHelpText>
    <label>Pro-Rata Number Of Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual number of days in month/year</fullName>
                <default>true</default>
                <label>Actual number of days in month/year</label>
            </value>
            <value>
                <fullName>Fixed - 30/360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>