force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Amount__c</fullName>
    <label>Z_Unused_2109_Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>