force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Comment_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Comment_New__c</fullName>
    <description>This comment will be copied to the &quot;Comment&quot; field on the Rent Invoices for this Lease, only if the below checkbox is ticked.</description>
    <inlineHelpText>This comment will be copied to the &quot;Comment&quot; field on the Rent Invoices for this Lease, only if the below checkbox is ticked.</inlineHelpText>
    <label>Rent Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>