force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Day__c</fullName>
    <description>Specifies the day of the month or the number of days to calculate the Rent Invoice due date, based on the selected Rent Due Type (relative to the Invoice Date, Rent Start Date, or Rent End Date).</description>
    <inlineHelpText>Specify the day of the month or number of days relative to the Invoice, Rent Start/End Date, based on selected Rent Due Type. If Relative is selected, enter 0 for the same day as the Invoice Date, Rent Start/End Date; enter +ve numbers to add days or -ve numbers to subtract days. If Fixed Date is selected, enter the exact day of the month.</inlineHelpText>
    <label>Rent Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>