force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Due_Day_Setting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Day_Setting__c</fullName>
    <description>Indicates whether rent is due before, during, or after the rent period when Rent Due Type is Fixed.</description>
    <inlineHelpText>Select when rent is due relative to the rent period: before, during, or after. Applies only when Rent Due Type is set to Fixed.</inlineHelpText>
    <label>Rent Due Day Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Date in Advance</fullName>
                <default>true</default>
                <label>Due Date in Advance</label>
            </value>
            <value>
                <fullName>Due Date in Mid-Period</fullName>
            </value>
            <value>
                <fullName>Due Date in Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>