force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Type__c</fullName>
    <description>Specifies how the Rent Invoice due date is determined—either on a fixed calendar day or relative to the Invoice Date, Rent Start Date, or Rent End Date.</description>
    <inlineHelpText>&quot;Fixed Date&quot;: Enter a specific day(1-31) in the &apos;Rent Due Day&apos; field. &quot;Fixed Day in a Week&quot;: Select both a &apos;Day&apos; and a &apos;Weekday Number&apos; to specify, for e.g., the 2nd Tuesday of the month. &quot;Relative&quot;: Enter a number of days in the &apos;Rent Due Day&apos; field to set the due date relative to the Invoice Date, Rent Start/End Date.</inlineHelpText>
    <label>Rent Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed Date</label>
            </value>
            <value>
                <fullName>Fixed Day in a week</fullName>
            </value>
            <value>
                <fullName>Relative Based On Invoice Date</fullName>
            </value>
            <value>
                <fullName>Relative Based On Rent Period Start Date</fullName>
            </value>
            <value>
                <fullName>Relative Based On Rent Period End Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>