force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_End_Date__c</fullName>
    <inlineHelpText>The last day of this Rent Schedule. By default it is a Lease End Date.</inlineHelpText>
    <label>Rent End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>