force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Period__c</fullName>
    <inlineHelpText>Period to which the Lessor charges the Lessee Rent in accordance with the Lease Agreement</inlineHelpText>
    <label>Rent Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>