force-app/main/default/objects/leaseworks__Stepped_Rent__c/fields/leaseworks__Rent_Start_Date_Always_End_of_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Start_Date_Always_End_of_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, the rent slip start dates will always be the last day of the month, e.g. Feb 28 or 29, Mar 31, Apr 30.</description>
    <inlineHelpText>If this box is checked, the Rent Slip start dates will always be the last day of the month, e.g. Feb 28 or 29, Mar 31, Apr 30.</inlineHelpText>
    <label>Rent Start Date Always End of Month</label>
    <type>Checkbox</type>
</CustomField>